main/stylesheet.css
/*** main ***/
	/* elements */
		body {
			position: fixed;
			top: 0px;
			left: 0px;
			height: 100vh;
			width: 100vw;
			padding: 0px;
			margin: 0px;
			border: 0px;
			overflow: hidden;
			color: var(--black-4);
			font-family: var(--font);
			font-weight: bold;
			font-size: var(--fontSize);
			box-shadow: 0px 0px var(--borderWidth) var(--black-4) inset;
			touch-action: none;
		}

		a, a:visited, a:hover, a:focus {
			text-decoration: none;
			font-weight: bold;
			outline: none;
			cursor: pointer;
			color: var(--blue-2);
			-webkit-tap-highlight-color: transparent;
		}

		a:hover, a:focus {
			text-shadow: 0px 0px var(--borderWidth) var(--white-4);
		}

		input, button, select, textarea {
			font-weight: bold;
			font-size: var(--fontSize);
			font-family: var(--font);
			outline: none;
			cursor: pointer;
			border: var(--borderWidth) solid var(--black-4);
			border-radius: var(--borderRadius);
			-webkit-appearance: none;
			-moz-appearance: none;
			overflow: hidden;
			color: var(--black-4);
			background-color: var(--white-4);
			padding: 0px;
			-webkit-tap-highlight-color: transparent;
		}

		input, button, select {
			white-space: nowrap;
			text-overflow: ellipsis;
		}

		button {
			color:  var(--white-4);
			background-color: var(--black-4);
			vertical-align: middle;
		}

		button:hover, button:focus, select:focus, textarea:focus, input:focus {
			-webkit-tap-highlight-color: transparent;
		}

		select:-moz-focusring {
			color: transparent;
			text-shadow: 0 0 0 var(--black-4);
		}

		audio {
			display: none;
			height: 0px;
			width: 0px;
			padding: 0px;
			margin: 0px;
			position: absolute;
			background: transparent;
			color: transparent;
			z-index: -1;
		}

	/* conditions */
		.hidden {
			display: none;
			pointer-events: none;
			user-select: none;
			-webkit-user-select: none;
			-moz-user-select: none;
			-ms-user-select: none;
			-o-user-select: none;
		}

		[hidden=true] {
			display: none;
			pointer-events: none;
			user-select: none;
			-webkit-user-select: none;
			-moz-user-select: none;
			-ms-user-select: none;
			-o-user-select: none;
		}

		.invisible {
			opacity: 0;
			pointer-events: none;
			transition: var(--animationTime);
			user-select: none;
			-webkit-user-select: none;
			-moz-user-select: none;
			-ms-user-select: none;
			-o-user-select: none;
		}

	/* sections */
		#message {
			position: fixed;
			top: var(--borderWidth);
			left: 50%;
			transform: translateX(-50%);
			width: calc(100vw - (var(--borderWidth) * 4));
			max-width: calc(var(--maxContainerWidth) - (var(--borderWidth) * 2));
			z-index: 100;
			padding: var(--borderWidth);
			box-shadow: 0px 0px var(--borderWidth) var(--black-4);
			background-color: rgba(0,0,0,var(--overlayOpacity));
			opacity: 0;
			color: var(--white-4);
			font-size: calc(var(--fontSize) * 2);
			text-align: center;
			pointer-events: none;
			border-radius: var(--borderRadius);
		}

/*** vendor prefixes ***/
	/* scrollbars */
		::-webkit-scrollbar {
			width: 0 !important;
			height: 0 !important;
		}

		::-moz-scrollbar {
			width: 0 !important;
			height: 0 !important;
		}

		::-ms-scrollbar {
			width: 0 !important;
			height: 0 !important;
		}

		::-o-scrollbar {
			width: 0 !important;
			height: 0 !important;
		}

	/* placeholders */
		::-webkit-input-placeholder {
			font-weight: bold;
			font-family: var(--font);
			text-align: center;
			line-height: 1.25;
			color: var(--black-2);
		}

		::-moz-placeholder {
			font-weight: bold;
			font-family: var(--font);
			text-align: center;
			color: var(--black-2);
		
		}

		::-o-input-placeholder {
			font-weight: bold;
			font-family: var(--font);
			text-align: center;
			color: var(--black-2);
		}

		:-ms-input-placeholder {
			font-weight: bold;
			font-family: var(--font);
			text-align: center;
			color: var(--black-2);
		}

